--- a/01_2024 網頁全端開發/0323_1/index.html
+++ b/01_2024 網頁全端開發/0323_1/index.html
@@ -50,7 +50,7 @@
               aria-valuenow="75"
               aria-valuemin="0"
               aria-valuemax="100"
-              style="width: 75%"
+              style="width: 95%"
             ></div>
           </div>
           <p>CSS</p>
@@ -61,7 +61,7 @@
               aria-valuenow="75"
               aria-valuemin="0"
               aria-valuemax="100"
-              style="width: 75%"
+              style="width: 85%"
             ></div>
           </div>
           <p>JavaScript</p>
@@ -87,6 +87,34 @@
             ></div>
           </div>
         </div>
+      </section>
+
+      <section class="three">
+        <section class="table">
+          <table>
+            <tr>
+              <td>自我簡歷</td>
+              <td>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</td>
+            </tr>
+            <tr>
+              <td>自我簡歷</td>
+              <td>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</td>
+            </tr>
+            <tr>
+              <td>自我簡歷</td>
+              <td>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</td>
+            </tr>
+            <tr>
+              <td>自我簡歷</td>
+              <td>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</td>
+            </tr>
+            <tr>
+              <td>自我簡歷</td>
+              <td>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</td>
+            </tr>
+          </table>
+        </section>
+        <section class="picture"></section>
       </section>
     </main>
 
